<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <LinearLayout
                android:id="@+id/quantity_text_layout"
                style="@style/editor_quantity_layout">

                <Button
                    android:id="@+id/decrement"
                    android:src="@drawable/ic_action_minus"
                    style="@style/minus_button" />

                <EditText
                    android:id="@+id/quantity"
                    tools:text="0"
                    android:inputType="numberDecimal"
                    style="@style/editor_quantity_text" />

                <Button
                    android:id="@+id/increment"
                    android:src="@drawable/ic_action_add"
                    style="@style/plus_button" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier drop-down spinner -->
            <EditText
                android:id="@+id/supplier"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_supplierNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplierNumber"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp" >

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_suppliers_number"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/order_button"
                android:background="@drawable/order_button"
                 />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>